sable stuff for cannons & piston coop improvements